finished working on the exercises

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 				<li><router-link to="/blog">Blog</router-link></li>
 				<li><router-link to="/contacts">Contacts</router-link></li>
 				<li><router-link to="/faq">Faq</router-link></li>
+		<div>
            </ul>
            <transition mode='out-in' name="slide-fade">
            <router-view></router-view>
+           </div>
 		</div>
 
 		<!-- jquery library -->
